epubextractor: Fix crash on some invalid files where epub_get_data returns an error.

BUG: 324307